2008-10-26  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-26  Scott Ellington <scott.ellington@gmail.com> 

	* Rectangle.cs: add center setter

2008-10-25  Scott Ellington <scott.ellington@gmail.com> 

	* Feature.cs: add XmlIncludes for serialization
	* Ring.cs: fix Close() bug
	* Data/SimpleFeatureSource.cs: add

2008-10-23  Scott Ellington <scott.ellington@gmail.com> 

	* Point.cs: add default ctor

2008-10-22  Scott Ellington <scott.ellington@gmail.com> 

	* Data/Shapefile/Shapefile.cs, Data/IFeatureSource.cs: add Extents
	  property
	* Projection/ProjFourWrapper.cs: use IProjector

2008-10-22  Scott Ellington <scott.ellington@gmail.com> 

	* WellKnownText.cs: add multipolygon wkt support
	* Polygon.cs: add default ctor
	* Ring.cs: add Close() and Validate()

2008-10-20  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-20  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-17  Scott Ellington <scott.ellington@gmail.com> 

	* Layer.cs: use int for width props
	* Drawing/MapDrawer.cs: get gdi+ drawer functional

2008-10-17  Scott Ellington <scott.ellington@gmail.com> 

	* Map.cs, Drawing/MapDrawer.cs, Cumberland.csproj: add stub for GDI+
	  drawer

2008-10-17  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-17  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-17  Scott Ellington <scott.ellington@gmail.com> 

	* Polygon.cs, Line.cs, Point.cs, PolyLine.cs, Feature.cs, Ring.cs,
	  Rectangle.cs: add methods

2008-10-17  Scott Ellington <scott.ellington@gmail.com> 

	* Layer.cs: add Id property

2008-10-17  Scott Ellington <scott.ellington@gmail.com> 

	* Drawing, Drawing/IMapDrawer.cs, Drawing/GdiPlus, Cumberland.csproj:
	  add new interface
	* Point.cs: clean up

2008-10-16  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-16  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-16  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-16  Scott Ellington <scott.ellington@gmail.com> 

	
